--- a/accounts/templates/accounts/landing.html
+++ b/accounts/templates/accounts/landing.html
@@ -14,7 +14,7 @@
                 <h2>Collaboration with <span>MalangCode Innovators</span></h2>
                 <p>Empowering the future of technology with innovation!</p>
                 <div class="buttons">
-                    <a href="#" class="btn btn-primary">See the Docs</a>
+                    <a href="{% url "swagger_ui" %}" class="btn btn-primary">See the Docs</a>
                     <a href="#" class="btn btn-secondary" style="margin-top: 0;">Visit Company</a>
                 </div>
                 <div class="social-icons">
